feat: add Footer component with dynamic subtitle and contact information

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -130,5 +130,8 @@
         "items":["Hands-on projects that simulate real-world Scenarios", "Responsive Design & Web Accesibility"]
       }
     ]
+  },
+  "footer":{
+    "subtitle":"Web Developer"
   }
 }
