--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -66,7 +66,7 @@
       },
       {
         "projectTitle": "Emotional Mitigation Playlist Recomendator W/ Spotify Playlists",
-        "projectDescription": "I developed a complete desktop application with MATLAB App Designer for butterfly classification. The main tool allows the user to upload an image, and using a trained neural network model, the system identifies and predicts the butterfly species. The project demonstrates an end-to-end machine learning workflow. In addition to the classification app, I created separate modules for model training and image processing. The latter utility allows you to dynamically load and apply different kernels (defined in a JSON) to visualize how filters affect feature extraction.",
+        "projectDescription": "This project is a full-stack web application designed for emotional detection and mitigation through music; The core of the system is a deep learning model (dense neural network with TensorFlow/Keras) that analyzes the audio characteristics of a song to classify it into three emotions: anger, sadness, or happiness. The backend, built in Python with Flask, serves this model and connects to the Spotify API (Spotipy) to recommend mitigation playlists that help the user regulate their mood. The project goes beyond the main demo, offering a metrics dashboard (built with Chart.js) to evaluate the model's performance and an interactive traceability timeline. The latter documents the entire research process and engineering decisions, including the pivot from a failed CNN model to the current DNN solution, demonstrating a complete ML development lifecycle.",
         "projectYear": "2025",
         "projectLinks":{
           "code":"https://github.com/TatoNaranjo/MitigacionEmocionalDL",
@@ -92,7 +92,7 @@
       },
       {
         "projectTitle": "Tato's Roguelike",
-        "projectDescription": "Python + Keras Deep Learning Model to recognize and detect emotions on a song and recommend an opposite sentiment based playlist",
+        "projectDescription": "“Tato's Roguelike” is a game development project that documents my hands-on learning of Python applied to a genre I am passionate about; The result is a functional dungeon exploration game where the player navigates randomly generated levels; Built from scratch following the popular Roguelike tutorial, the project uses tcod for the console interface and Numpy for data operations. The code is structured in a modular way and is completely open to contributions, reflecting my interest in open source software and collaborative learning.",
         "projectYear": "2024",
         "projectLinks":{
           "code":"https://github.com/TatoNaranjo/ElRoguelikeDeTato",
